--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,7 @@
     "reactstrap": "^9.2.3",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://adityakalburgi.github.io/Travel_agency_website"
+    "web-vitals": "^2.1.4"
 
   },
   "scripts": {
