--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "json": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
@@ -21,7 +22,6 @@
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
-
   },
   "scripts": {
     "start": "react-scripts start",
