--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "nodemailer": "^6.9.8"
   }
 }
